@@ -1,3 +1,8 @@
+2011-03-05  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSBundle.m: AbsolutePathOfExecutable() attempt to fix this
+	to return a fully standardised path without symbolic links.
+
 2011-03-05  Tom Davie <beelsebob2>
 
 	* Source/NSSet.m:
